fix: fix jumping width when we start to show form.

--- a/src/formhero.scss
+++ b/src/formhero.scss
@@ -48,6 +48,7 @@ body.formhero-scroll-block
 {
     overflow: hidden !important;
     position: fixed;
+    width: 100%;
 }
 
 
